Media Controls: add "px" to media controls popup menu rule to position.

Otherwise, depending on the element for which the popup menu is created,
the position might be off.

Bug: 777278
Change-Id: I2e5ffbc08ffa88997a42a3ee09d0dec65798c097
Reviewed-on: https://chromium-review.googlesource.com/735611
Reviewed-by: Becca Hughes <beccahughes@chromium.org>
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#511155}
Former-commit-id: db17c3ccab2dbe2ce85e2317c26f7104570ec28e